Fix tooltip issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -668,3 +668,8 @@ ul ul {
 	border-radius: 5px;
   margin-top: 2em;
 }
+
+/* fixes tooltip issue on mobile */
+button.tooltip-anchor {
+  width: auto;
+}
